fixed grid gap

--- a/src/pages/SingleCategory/SingleCategory.css
+++ b/src/pages/SingleCategory/SingleCategory.css
@@ -21,6 +21,7 @@
 
 .single-category .all-products {
   display: grid;
+  grid-gap: 0px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
